# Projeto3MachineLearning

./: APS3.ipynb  Projeto_Enunciado.ipynb  README.md  pyproject.toml
